   World
 * gameplay changes:
   * improved default weapon selection on player attack (patch #500)
   * attack_weight=0 disables the attack when attacking
   * defense_weight=0 disables the attack when defending
   * attack_weight is now functional (#5014)
 * graphics:
   * New castle tiles
   * Added Drake, Gladiator, Enforcer, and Slasher death animations
 * user interface
   * centered title screen logo for 1024x768 (still off-center for 800x600)
   * prevent icons in themes from being scaled up (only scaling down is allowed)
   * fix menu capitalization consistency (#4972)
   * reduce scrolling during unit movement
   * make default zoom work properly
   * unit speed is back to 1.0 speed
   * upgraded font from DejaVuSans 1.12 to 2.2, has Greek support
   * TAB completion in MP lobby
 * WML improvements
   * attack ranges renamed to "melee" and "ranged", new ranges can be used
     (retaliation will use any attack of the same range)
   * starting_villages macro updated for added village types
   * split factions of multiplayer.cfg into data/factions to ease making
     combined eras without having to maintain mainline factions
   * abilities are now more configurable in a [abilities] tag, old ability=
     tag deprecated (patch #498), cure is available via [heals] ability tag
   * all currently used abilities added as macros in data/abilities.cfg
   * abilities can receive time of day and terrain [filter]
     - ambush and nightstalk are available via the new [hides] ability tag
   * added a optional random_leader= tag inside a [multiplayer_side] to
     specify a different list of randomly selectable leaders
   * added level as a possible argument for standard unit [filter]
 * music:
   * support for more than one music file per scenario with adjustable spacing
 * Miscellaneous
   * added a require_amla element to [advancement] tags.
   * anonymous data logging for single player campaigns, see stats.wesnoth.org