@@ -61,6 +61,7 @@ SVN trunk (1.1+svn):
    * New castle tiles
    * Added Drake, Gladiator, Enforcer, and Slasher death animations
  * user interface
+   * added new image in advancement tag that is displayed in advancement dialog and changed old image to icon in advancement tag.
    * centered title screen logo for 1024x768 (still off-center for 800x600)
    * prevent icons in themes from being scaled up (only scaling down is allowed)
    * fix menu capitalization consistency (#4972)
